docs: sort definitions

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -130,38 +130,38 @@ TODO
 
 TODO
 
-[@JamesHenry]: https://github.com/JamesHenry
-[@makepost]: https://github.com/makepost
-[@jsnajdr]: https://github.com/jsnajdr
+[@existentialism]: https://github.com/existentialism
 [@flurmbo]: https://github.com/flurmbo
 [@ikatyang]: https://github.com/ikatyang
-[@lhchavez]: https://github.com/lhchavez
-[@sh7dm]: https://github.com/sh7dm
-[@existentialism]: https://github.com/existentialism
 [@j-f1]: https://github.com/j-f1
-[@n1ru4l]: https://github.com/n1ru4l
-[@wuweiweiwu]: https://github.com/wuweiweiwu
+[@jameshenry]: https://github.com/JamesHenry
+[@jsnajdr]: https://github.com/jsnajdr
 [@kachkaev]: https://github.com/kachkaev
-[#5750]: https://github.com/prettier/prettier/pull/5750
-[#5728]: https://github.com/prettier/prettier/pull/5728
-[#5739]: https://github.com/prettier/prettier/pull/5739
-[#5710]: https://github.com/prettier/prettier/pull/5710
-[#5724]: https://github.com/prettier/prettier/pull/5724
-[#5704]: https://github.com/prettier/prettier/pull/5704
-[#5657]: https://github.com/prettier/prettier/pull/5657
-[#5685]: https://github.com/prettier/prettier/pull/5685
-[#5658]: https://github.com/prettier/prettier/pull/5658
-[#5632]: https://github.com/prettier/prettier/pull/5632
-[#5597]: https://github.com/prettier/prettier/pull/5597
-[#5642]: https://github.com/prettier/prettier/pull/5642
-[#5637]: https://github.com/prettier/prettier/pull/5637
-[#5606]: https://github.com/prettier/prettier/pull/5606
-[#5607]: https://github.com/prettier/prettier/pull/5607
-[#5612]: https://github.com/prettier/prettier/pull/5612
-[#5596]: https://github.com/prettier/prettier/pull/5596
-[#5608]: https://github.com/prettier/prettier/pull/5608
+[@lhchavez]: https://github.com/lhchavez
+[@makepost]: https://github.com/makepost
+[@n1ru4l]: https://github.com/n1ru4l
+[@sh7dm]: https://github.com/sh7dm
+[@wuweiweiwu]: https://github.com/wuweiweiwu
+[#5494]: https://github.com/prettier/prettier/pull/5494
 [#5505]: https://github.com/prettier/prettier/pull/5505
 [#5590]: https://github.com/prettier/prettier/pull/5590
-[#5647]: https://github.com/prettier/prettier/pull/5647
+[#5596]: https://github.com/prettier/prettier/pull/5596
+[#5597]: https://github.com/prettier/prettier/pull/5597
+[#5606]: https://github.com/prettier/prettier/pull/5606
+[#5607]: https://github.com/prettier/prettier/pull/5607
+[#5608]: https://github.com/prettier/prettier/pull/5608
+[#5612]: https://github.com/prettier/prettier/pull/5612
 [#5629]: https://github.com/prettier/prettier/pull/5629
-[#5494]: https://github.com/prettier/prettier/pull/5494
+[#5632]: https://github.com/prettier/prettier/pull/5632
+[#5637]: https://github.com/prettier/prettier/pull/5637
+[#5642]: https://github.com/prettier/prettier/pull/5642
+[#5647]: https://github.com/prettier/prettier/pull/5647
+[#5657]: https://github.com/prettier/prettier/pull/5657
+[#5658]: https://github.com/prettier/prettier/pull/5658
+[#5685]: https://github.com/prettier/prettier/pull/5685
+[#5704]: https://github.com/prettier/prettier/pull/5704
+[#5710]: https://github.com/prettier/prettier/pull/5710
+[#5724]: https://github.com/prettier/prettier/pull/5724
+[#5728]: https://github.com/prettier/prettier/pull/5728
+[#5739]: https://github.com/prettier/prettier/pull/5739
+[#5750]: https://github.com/prettier/prettier/pull/5750
