docs: add some descriptions

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -12,61 +12,213 @@ This release adds TODO.
 
 ### HTML
 
-#### Preserve surrounding linebreaks ([#5596] by [@ikatyang])
+#### Respect surrounding linebreaks ([#5596] by [@ikatyang])
 
-TODO
+Previously, Prettier always put elements in a single line if they fit the print
+width, but it is not suitable for cases that is used as lists or `if-else`
+blocks. To solve this problem, we'll respect surrounding linebreaks for all
+elements since there is no reliable way to determine if it's used as lists.
+
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<div class="list">
+  <div class="item">Jan</div>
+</div>
+<a v-if="i !== -1" href="#" @click.prevent="select(i)">
+  {{ i }}
+</a>
+<span v-else>
+  <slot name="ellipsis">&hellip;</slot>
+</span>
+
+<!-- Output (Prettier 1.15) -->
+<div class="list"><div class="item">Jan</div></div>
+<a v-if="i !== -1" href="#" @click.prevent="select(i)"> {{ i }} </a>
+<span v-else> <slot name="ellipsis">&hellip;</slot> </span>
+
+<!-- Output (Prettier 1.16) -->
+<div class="list">
+  <div class="item">Jan</div>
+</div>
+<a v-if="i !== -1" href="#" @click.prevent="select(i)">
+  {{ i }}
+</a>
+<span v-else>
+  <slot name="ellipsis">&hellip;</slot>
+</span>
+```
 
 ### General
 
 #### Better CRLF handling ([#5494] by [@ikatyang])
 
-TODO
+You might have noticed a few weird things happened only on Windows, which is
+usually caused by the bad CRLF handling. In this release, we completely get rid
+of them by normalizing linebreaks before/after formatting.
 
 ### JavaScript
 
-#### Add support for React `useEffect` hook ([#5608] by [@j-f1])
+#### Improve the pattern used by React hooks ([#5608] by [@j-f1])
 
-TODO
+<!-- prettier-ignore -->
+```js
+// Input
+function helloWorld() {
+  useEffect(() => {
+    // do something
+  }, [props.value])
+}
+
+// Output (Prettier 1.15)
+function helloWorld() {
+  useEffect(
+    () => {
+      // do something
+    },
+    [props.value]
+  );
+}
+
+// Output (Prettier 1.16)
+function helloWorld() {
+  useEffect(() => {
+    // do something
+  }, [props.value]);
+}
+```
 
 #### Rename `babylon` with `babel` ([#5647] by [@wuweiweiwu])
 
-TODO
+`babylon` was renamed with `@babel/parser` in Babel 7, we reflected this change
+in 1.16 so that it should be easier to understand for newcomers.
 
 ### Flow
 
-#### Add `--parser babel-flow` ([#5685] by [@ikatyang])
+#### Add `babel-flow` parser ([#5685] by [@ikatyang])
 
-TODO
+As we mentioned in the docs, both `babylon` and `flow` support Flow syntax, but
+there're a few edge cases that the syntax could be ambiguous, which causes the
+inconsistency between `babylon` and `flow`, `babylon` prefers JavaScript while
+`flow` prefers Flow. To address this issue, we added `babel-flow` in this
+release, which uses the same parser as `babylon` but prefers Flow.
+
+<!-- prettier-ignore -->
+```js
+// Input
+const Theme = React.createContext<"light" | "dark">("light");
+
+// Output (Prettier 1.15, --parser babylon)
+const Theme = (React.createContext < "light") | ("dark" > "light");
+
+// Output (Prettier 1.16, --parser babel-flow)
+const Theme = React.createContext<"light" | "dark">("light");
+```
 
 ### CLI
 
 #### Add `--check` flag ([#5629] by [@kachkaev])
 
-TODO
+There's a `--list-different` flag that is used to fail the CI if one of the
+input files is not formatted, which works great but we found that its _error
+message_ is not human-friendly but machine-friendly, so we added a `--check`
+flag to output something human-friendly.
+
+<code style="display: block; background: #282a36; color: #f1f1f0">
+<span style="color: #686868"># Prettier 1.15</span><br />
+$ <span style="color: #5af78e">prettier</span> <u>*.js</u> --list-different<br />
+unformatted.js<br />
+<br />
+<span style="color: #686868"># Prettier 1.16</span><br />
+$ <span style="color: #5af78e">prettier</span> <u>*.js</u> --check<br />
+Checking formatting...<br />
+unformatted.js<br />
+Code style issues found in the above file(s). Forgot to run Prettier?<br />
+</code>
 
 ## Other changes
 
 ### General
 
-#### Fix unexpected formatting caused by `--range-start` ([#5632] by [@lhchavez])
+#### Fix unexpected formatting caused by range format ([#5632] by [@lhchavez])
 
-TODO
+<!-- prettier-ignore -->
+```js
+// Input
+something("something", () => {
+  const something = {
+    something: [
+      {
+        long1: "longlonglonglonglonglonglonglonglonglonglonglong",
+        long2: "longlonglonglonglonglonglonglonglonglonglonglong",
+      }
+    ]
+  };
+});
+
+// Output (Prettier 1.15, --range-start 100 --range-end 120)
+something("something", () => {
+  const something = { something: [{ long1: "longlonglonglonglonglonglonglonglonglonglonglong", long2: "longlonglonglonglonglonglonglonglonglonglonglong" }] };
+});
+
+// Output (Prettier 1.16, --range-start 100 --range-end 120)
+something("something", () => {
+  const something = {
+    something: [
+      {
+        long1: "longlonglonglonglonglonglonglonglonglonglonglong",
+        long2: "longlonglonglonglonglonglonglonglonglonglonglong",
+      }
+    ]
+  };
+});
+```
 
 ### Standalone
 
 #### Remove the dynamic `require()` call in the standalone bundle ([#5612] by [@j-f1])
 
-TODO
+Previously, dynamic `require()`s are still presented in the standalone bundle
+even if it's not used, which causes a warning if you'd like to bundle it. We
+have removed those unnecessary `require()`s in 1.16.
 
 ### TypeScript
 
-#### Correctly handle `//` in TSX ([#5728], [#5750] by [@JamesHenry])
+#### Correctly handle `//` in TSX ([#5728] by [@JamesHenry])
 
-TODO
+Previously, `//`s in TSX were wrongly treated as comments, it's now fixed.
+
+<!-- prettier-ignore -->
+```js
+// Input
+const link = <a href="example.com">http://example.com</a>
+
+// Output (Prettier 1.15)
+// Error: Comment location overlaps with node location
+
+// Output (Prettier 1.16)
+const link = <a href="example.com">http://example.com</a>;
+```
 
 #### Remove redundant parentheses around type annotations ([#5724] by [@flurmbo])
 
-TODO
+<!-- prettier-ignore -->
+```js
+// Input
+class Foo {
+  bar: (() => boolean);
+}
+
+// Output (Prettier 1.15)
+class Foo {
+  bar: (() => boolean);
+}
+
+// Output (Prettier 1.16)
+class Foo {
+  bar: () => boolean;
+}
+```
 
 ### JavaScript
 
@@ -76,11 +228,61 @@ TODO
 
 #### Add support for class private methods ([#5637] by [@existentialism])
 
-TODO
+```js
+// Input
+class Hello {
+  #world() {}
+}
+
+// Output (Prettier 1.15)
+// SyntaxError
+
+// Output (Prettier 1.16)
+class Hello {
+  #world() {}
+}
+```
 
 #### Correct indentation for expressions in root template ([#5607] by [@ikatyang])
 
-TODO
+<!-- prettier-ignore -->
+```js
+// Input
+if (a) {
+  return `
+hello
+${foo({
+  bar,
+  baz
+})}
+world
+`;
+}
+
+// Output (Prettier 1.15)
+if (a) {
+  return `
+hello
+${foo({
+    bar,
+    baz
+  })}
+world
+`;
+}
+
+// Output (Prettier 1.16)
+if (a) {
+  return `
+hello
+${foo({
+  bar,
+  baz
+})}
+world
+`;
+}
+```
 
 ### TypeScript/Flow
 
@@ -164,4 +366,3 @@ TODO
 [#5724]: https://github.com/prettier/prettier/pull/5724
 [#5728]: https://github.com/prettier/prettier/pull/5728
 [#5739]: https://github.com/prettier/prettier/pull/5739
-[#5750]: https://github.com/prettier/prettier/pull/5750
