docs: mention babylon still works

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -93,6 +93,8 @@ function helloWorld() {
 `babylon` was renamed with `@babel/parser` in Babel 7, we reflected this change
 in 1.16 so that it should be easier to understand for newcomers.
 
+(`babylon` is now deprecated but still works.)
+
 ### Flow
 
 #### Add `babel-flow` parser ([#5685] by [@ikatyang])
