docs: add descriptions

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -4,7 +4,8 @@ authorURL: https://github.com/ikatyang
 title: "Prettier 1.16: HTML improvements and better CRLF handling"
 ---
 
-This release adds TODO.
+This release improves HTML formatting and contains better CRLF handling, new
+syntax features, and several bugfixes.
 
 <!--truncate-->
 
@@ -290,49 +291,173 @@ world
 
 #### Correctly recognize `/* HTML */` templates ([#5658] by [@ikatyang])
 
-TODO
+We added support for [`/* HTML */` template formatting][html-comment-template]
+in 1.15, but it somehow only works for `babylon`. We've fixed this issue in
+1.16.
+
+[html-comment-template]:
+  https://prettier.io/blog/2018/11/07/1.15.0.html#html-template-literal-in-javascript
 
 ### CSS
 
 #### Fix broken output for lists casued by comments ([#5710] by [@jsnajdr])
 
-TODO
+<!-- prettier-ignore -->
+```scss
+// Input
+$my-list2:
+  a // a
+  b
+  c;
+
+// Output (Prettier 1.15)
+$my-list2: a// a
+  bc;
+
+// Output (Prettier 1.16)
+$my-list2: a // a
+  b c;
+```
 
 #### Correctly handle backslashes ([#5597] by [@sh7dm])
 
-TODO
+<!-- prettier-ignore -->
+```less
+// Input
+.figcaption {
+    .margin-top-1\/2;
+    .large\:none;
+}
+
+// Output (Prettier 1.15)
+.figcaption {
+  .margin-top-1\ / 2;
+  .large\: none;
+}
+
+// Output (Prettier 1.16)
+.figcaption {
+  .margin-top-1\/2;
+  .large\: none;
+}
+```
 
 ### MDX
 
 #### Correctly handle inline html ([#5704] by [@ikatyang])
 
-TODO
+<!-- prettier-ignore -->
+```md
+<!-- Input -->
+| Column 1 | Column 2 |
+|---|---|
+| Text | <Hello>Text</Hello> |
+
+<!-- Output (Prettier 1.15) -->
+<!-- SyntaxError -->
+
+<!-- Output (Prettier 1.16) -->
+| Column 1 | Column 2            |
+| -------- | ------------------- |
+| Text     | <Hello>Text</Hello> |
+```
 
 ### HTML
 
 #### Format script with type "application/ld+json" ([#5642] by [@ikatyang])
 
-TODO
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<script type="application/ld+json">
+  {   "json":true  }
+</script>
+
+<!-- Output (Prettier 1.15) -->
+<script type="application/ld+json">
+  {   "json":true  }
+</script>
+
+<!-- Output (Prettier 1.16) -->
+<script type="application/ld+json">
+  { "json": true }
+</script>
+```
 
 #### Treat `.mjml` files as HTML ([#5505] by [@n1ru4l])
 
-TODO
+MJML is a markup language that uses the same syntax as HTML, we added its
+extension name `.mjml` to the list of HTML extension names so that it should be
+recognized by default.
 
 #### Smart quote for attributes ([#5590] by [@ikatyang])
 
-TODO
+Previously, attributes quotes were always printed as double quotes. To improve
+readability, they are now printed as the quote type that will produce fewer
+escapes.
+
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<div x='123"456'></div>
+<div x="123'456"></div>
+
+<!-- Output (Prettier 1.15) -->
+<div x="123&quot;456"></div>
+<div x="123'456"></div>
+
+<!-- Output (Prettier 1.16) -->
+<div x='123"456'></div>
+<div x="123'456"></div>
+```
 
 ### Vue
 
 #### Tag names are case-sensitive ([#5606] by [@ikatyang])
 
-TODO
+Previously, we lowercased tag names before querying tag definition while
+parsing, which causes `<Input>` component to be recognized as `<input>` and
+produces a syntax error on `</Input>` since void elements could not be closed.
+We've fixed this issue in 1.16.
+
+<!-- prettier-ignore -->
+```vue
+<!-- Input -->
+<template>
+  <Input></Input>
+</template>
+
+<!-- Output (Prettier 1.15) -->
+<!-- SyntaxError -->
+
+<!-- Output (Prettier 1.16) -->
+<template>
+  <Input></Input>
+</template>
+```
 
 ### Vue/Angular
 
 #### Add parentheses to avoid unexpected `}}` in interpolations ([#5657] by [@ikatyang])
 
-TODO
+`}}` is not allowed to be used in a interpolation since it'll be recognized as
+interpolation ending, we've added parentheses for cases that may produce invalid
+`}}` in 1.16.
+
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<p>{{ foo({ bar: {} }) }}</p>
+
+<!-- First Output (Prettier 1.15, --no-bracket-spacing) -->
+<p>{{ foo({bar: {}}) }}</p>
+
+<!-- Second Output (Prettier 1.15, --no-bracket-spacing) -->
+<!-- SyntaxError -->
+
+<!-- Output (Prettier 1.16, --no-bracket-spacing) -->
+<p>{{ foo({bar: ({})}) }}</p>
+```
 
 [@existentialism]: https://github.com/existentialism
 [@flurmbo]: https://github.com/flurmbo
