docs: add description

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -225,9 +225,49 @@ class Foo {
 
 ### JavaScript
 
-#### TODO(title): fix(javascript): skip .connect() method when composing fun ([#5739] by [@makepost])
+#### Do not treat `something.connect()` as functional composition ([#5739] by [@makepost])
 
-TODO
+The special handling for `connect()` was introduced for Redux several release
+ago, but it turns out this pattern is too common that it may not be suitable to
+always apply the functional composition formatting. Those unsuitable cases could
+be summed up as `something.connect()`, so we stopped to treat them as functional
+composition in 1.16.
+
+<!-- prettier-ignore -->
+```js
+// Input
+app.connect("activate", async () => {
+  await data.load();
+  win.show_all();
+});
+const ConnectedComponent = connect(
+  bar,
+  baz
+)(foo);
+
+// Output (Prettier 1.15)
+app.connect(
+  "activate",
+  async () => {
+    await data.load();
+    win.show_all();
+  }
+);
+const ConnectedComponent = connect(
+  bar,
+  baz
+)(foo);
+
+// Output (Prettier 1.16)
+app.connect("activate", async () => {
+  await data.load();
+  win.show_all();
+});
+const ConnectedComponent = connect(
+  bar,
+  baz
+)(foo);
+```
 
 #### Add support for class private methods ([#5637] by [@existentialism])
 
