Partially copy-edit post

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -5,7 +5,7 @@ title: "Prettier 1.16: HTML improvements and better CRLF handling"
 ---
 
 This release improves HTML formatting and contains better CRLF handling, new
-syntax features, and several bugfixes.
+syntax features, and fixes several bugs.
 
 <!--truncate-->
 
@@ -15,10 +15,11 @@ syntax features, and several bugfixes.
 
 #### Respect surrounding linebreaks ([#5596] by [@ikatyang])
 
-Previously, Prettier always put elements in a single line if they fit the print
-width, but it is not suitable for cases that is used as lists or `if-else`
-blocks. To solve this problem, we'll respect surrounding linebreaks for all
-elements since there is no reliable way to determine if it's used as lists.
+Previously, Prettier always put elements in a single line if they didn’t
+go past the `printWidth`, but this doesn’t work for elements that are used as
+`if`-`else` blocks or are intended to contain several items. To solve this
+problem, we’ll respect surrounding linebreaks for all elements since there is
+no reliable way to determine if they’re being used in these ways.
 
 <!-- prettier-ignore -->
 ```html
@@ -54,9 +55,10 @@ elements since there is no reliable way to determine if it's used as lists.
 
 #### Better CRLF handling ([#5494] by [@ikatyang])
 
-You might have noticed a few weird things happened only on Windows, which is
-usually caused by the bad CRLF handling. In this release, we completely get rid
-of them by normalizing linebreaks before/after formatting.
+You might have noticed a few weird formatting issues that only occurred on Windows.
+Many of these issues were caused by our handling of CR-LF line endings
+In this release, we were able to resolve these issues by normalizing linebreaks
+both before and after formatting.
 
 ### JavaScript
 
@@ -89,22 +91,27 @@ function helloWorld() {
 }
 ```
 
-#### Rename `babylon` with `babel` ([#5647] by [@wuweiweiwu])
+#### Rename `babylon` parser to `babel` ([#5647] by [@wuweiweiwu])
 
-`babylon` was renamed with `@babel/parser` in Babel 7, we reflected this change
-in 1.16 so that it should be easier to understand for newcomers.
+Babel’s parser, `babylon`, was renamed to `@babel/parser` in Babel 7. We’ve
+renamed our `babylon` parser to `babel` as well to reduce confusion.
 
-(`babylon` is now deprecated but still works.)
+The `babylon` parser name is now deprecated but it still works.
+
+If you need to change your config due to this change, please take a second to read
+[our docs on the `parser` option], especially the note at the bottom.
+
+[our docs on the `parser` option]: https://prettier.io/docs/en/configuration.html#setting-the-parser-docs-en-optionshtml-parser-option
 
 ### Flow
 
 #### Add `babel-flow` parser ([#5685] by [@ikatyang])
 
-As we mentioned in the docs, both `babylon` and `flow` support Flow syntax, but
-there're a few edge cases that the syntax could be ambiguous, which causes the
-inconsistency between `babylon` and `flow`, `babylon` prefers JavaScript while
-`flow` prefers Flow. To address this issue, we added `babel-flow` in this
-release, which uses the same parser as `babylon` but prefers Flow.
+Both the `babel` and `flow` parsers support Flow syntax by default, but there are a few
+edge cases where Flow syntax is ambiguous. By default, Babel’s Flow parser will parse the
+ambiguous code as regular JS, while the native Flow parser will parse it as Flow syntax.
+To address this issue, we added the `babel-flow` parser option, which uses Babel’s parser,
+but prefers Flow syntax when ambiguities arise.
 
 <!-- prettier-ignore -->
 ```js
@@ -120,12 +127,14 @@ const Theme = React.createContext<"light" | "dark">("light");
 
 ### CLI
 
-#### Add `--check` flag ([#5629] by [@kachkaev])
+#### Add a `--check` flag ([#5629] by [@kachkaev])
 
-There's a `--list-different` flag that is used to fail the CI if one of the
-input files is not formatted, which works great but we found that its _error
-message_ is not human-friendly but machine-friendly, so we added a `--check`
-flag to output something human-friendly.
+Passing `--list-different` to the `prettier` CLI command will cause Prettier to
+exit with an error code if one or more of the files passed to it has not been
+formatted with Prettier. This works great, but it doesn’t provide any information
+in the output except for the files which aren’t properly formatted. This isn’t
+very friendly for new contributors and users in general, so we added a `--check`
+option that produces more human-friendly output.
 
 <code style="display: block; background: #282a36; color: #f1f1f0">
 <span style="color: #686868"># Prettier 1.15</span><br />
@@ -181,15 +190,17 @@ something("something", () => {
 
 #### Remove the dynamic `require()` call in the standalone bundle ([#5612] by [@j-f1])
 
-Previously, dynamic `require()`s are still presented in the standalone bundle
-even if it's not used, which causes a warning if you'd like to bundle it. We
-have removed those unnecessary `require()`s in 1.16.
+Previously, a dynamic `require()` call was present in the `standalone.js` file designed
+for usage in browsers. It was used in a way where it wasn’t actually called, but
+tools like webpack to throw a warning. We adjusted the build script to remove
+this `require()` call in the standalone bundle in Prettier 1.16.
 
 ### TypeScript
 
 #### Correctly handle `//` in TSX ([#5728] by [@JamesHenry])
 
-Previously, `//`s in TSX were wrongly treated as comments, it's now fixed.
+Previously, putting `//` as a child of a JSX element in TypeScript led to an error
+because it was interpreted as a comment. Prettier 1.16 fixes this issue.
 
 <!-- prettier-ignore -->
 ```js
@@ -227,11 +238,10 @@ class Foo {
 
 #### Do not treat `something.connect()` as functional composition ([#5739] by [@makepost])
 
-The special handling for `connect()` was introduced for Redux several release
-ago, but it turns out this pattern is too common that it may not be suitable to
-always apply the functional composition formatting. Those unsuitable cases could
-be summed up as `something.connect()`, so we stopped to treat them as functional
-composition in 1.16.
+A special format for `connect()` calls was introduced to improve formatting of Redux
+several versions ago, but there are many other uses for functions named `connect` that
+shouldn’t be formatted that way. Since most of these cases involved a `connect` method,
+we no longer treat `foo.connect()` calls as functional composition.
 
 <!-- prettier-ignore -->
 ```js
@@ -332,11 +342,10 @@ world
 #### Correctly recognize `/* HTML */` templates ([#5658] by [@ikatyang])
 
 We added support for [`/* HTML */` template formatting][html-comment-template]
-in 1.15, but it somehow only works for `babylon`. We've fixed this issue in
+in 1.15, but it somehow only works for `babylon`. We’ve fixed this issue in
 1.16.
 
-[html-comment-template]:
-  https://prettier.io/blog/2018/11/07/1.15.0.html#html-template-literal-in-javascript
+[html-comment-template]: https://prettier.io/blog/2018/11/07/1.15.0.html#html-template-literal-in-javascript
 
 ### CSS
 
@@ -458,7 +467,7 @@ escapes.
 Previously, we lowercased tag names before querying tag definition while
 parsing, which causes `<Input>` component to be recognized as `<input>` and
 produces a syntax error on `</Input>` since void elements could not be closed.
-We've fixed this issue in 1.16.
+We’ve fixed this issue in 1.16.
 
 <!-- prettier-ignore -->
 ```vue
@@ -480,8 +489,8 @@ We've fixed this issue in 1.16.
 
 #### Add parentheses to avoid unexpected `}}` in interpolations ([#5657] by [@ikatyang])
 
-`}}` is not allowed to be used in a interpolation since it'll be recognized as
-interpolation ending, we've added parentheses for cases that may produce invalid
+`}}` is not allowed to be used in a interpolation since it’ll be recognized as
+interpolation ending, we’ve added parentheses for cases that may produce invalid
 `}}` in 1.16.
 
 <!-- prettier-ignore -->
