docs: add missing dot and fix CLI example

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -56,7 +56,7 @@ no reliable way to determine if they’re being used in these ways.
 #### Better CRLF handling ([#5494] by [@ikatyang])
 
 You might have noticed a few weird formatting issues that only occurred on Windows.
-Many of these issues were caused by our handling of CR-LF line endings
+Many of these issues were caused by our handling of CR-LF line endings.
 In this release, we were able to resolve these issues by normalizing linebreaks
 both before and after formatting.
 
@@ -138,11 +138,11 @@ option that produces more human-friendly output.
 
 <code style="display: block; background: #282a36; color: #f1f1f0">
 <span style="color: #686868"># Prettier 1.15</span><br />
-$ <span style="color: #5af78e">prettier</span> <u>*.js</u> --list-different<br />
+$ <span style="color: #5af78e">prettier</span> <span style="color: #57c7ff">\*.js</span> --list-different<br />
 unformatted.js<br />
 <br />
 <span style="color: #686868"># Prettier 1.16</span><br />
-$ <span style="color: #5af78e">prettier</span> <u>*.js</u> --check<br />
+$ <span style="color: #5af78e">prettier</span> <span style="color: #57c7ff">\*.js</span> --check<br />
 Checking formatting...<br />
 unformatted.js<br />
 Code style issues found in the above file(s). Forgot to run Prettier?<br />
