docs: add description for #5763

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -186,6 +186,22 @@ something("something", () => {
 });
 ```
 
+### API
+
+#### Allow plugin instances to be passed in the `plugins` field of format options ([#5763] by [@Kingwl])
+
+Previously, plugin instances were somehow disallowed to be passed in the
+`plugins` field of format options but it should be allowed. We've fixed this
+issue in Prettier 1.16.
+
+```js
+const prettier = require("prettier");
+const fooPlugin = require("./path/to/foo-plugin");
+prettier.format("foo-code", { plugins: [fooPlugin], parser: "foo-parser" });
+// Output (Prettier 1.15): Error: Path must be a string.
+// Output (Prettier 1.16): No error
+```
+
 ### Standalone
 
 #### Remove the dynamic `require()` call in the standalone bundle ([#5612] by [@j-f1])
@@ -515,6 +531,7 @@ interpolation ending, we’ve added parentheses for cases that may produce inval
 [@jameshenry]: https://github.com/JamesHenry
 [@jsnajdr]: https://github.com/jsnajdr
 [@kachkaev]: https://github.com/kachkaev
+[@kingwl]: https://github.com/Kingwl
 [@lhchavez]: https://github.com/lhchavez
 [@makepost]: https://github.com/makepost
 [@n1ru4l]: https://github.com/n1ru4l
@@ -542,3 +559,4 @@ interpolation ending, we’ve added parentheses for cases that may produce inval
 [#5724]: https://github.com/prettier/prettier/pull/5724
 [#5728]: https://github.com/prettier/prettier/pull/5728
 [#5739]: https://github.com/prettier/prettier/pull/5739
+[#5763]: https://github.com/prettier/prettier/pull/5763
