docs: tweak example

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -197,9 +197,12 @@ issue in Prettier 1.16.
 ```js
 const prettier = require("prettier");
 const fooPlugin = require("./path/to/foo-plugin");
-prettier.format("foo-code", { plugins: [fooPlugin], parser: "foo-parser" });
-// Output (Prettier 1.15): Error: Path must be a string.
-// Output (Prettier 1.16): No error
+const formatted = prettier.format("foo-code", {
+  plugins: [fooPlugin],
+  parser: "foo-parser"
+});
+// Prettier 1.15: Error
+// Prettier 1.16: No error
 ```
 
 ### Standalone
