docs: add description for #5672

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -356,6 +356,47 @@ world
 }
 ```
 
+#### Remove unnecessary linebreaks from HTML template literals
+
+<!-- prettier-ignore -->
+```js
+// Input
+function HelloWorld() {
+  return html`
+    <h3>Bar List</h3>
+    ${bars.map(bar => html`
+       <p>${bar}</p>
+    `)}
+  `;
+}
+
+// Output (Prettier 1.15)
+function HelloWorld() {
+  return html`
+    <h3>Bar List</h3>
+    ${
+      bars.map(
+        bar => html`
+          <p>${bar}</p>
+        `
+      )
+    }
+  `;
+}
+
+// Output (Prettier 1.16)
+function HelloWorld() {
+  return html`
+    <h3>Bar List</h3>
+    ${bars.map(
+      bar => html`
+        <p>${bar}</p>
+      `
+    )}
+  `;
+}
+```
+
 ### TypeScript/Flow
 
 #### Correctly recognize `/* HTML */` templates ([#5658] by [@ikatyang])
