Finish copy edit

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -401,11 +401,11 @@ function HelloWorld() {
 
 #### Correctly recognize `/* HTML */` templates ([#5658] by [@ikatyang])
 
-We added support for [`/* HTML */` template formatting][html-comment-template]
-in 1.15, but it somehow only works for `babylon`. We’ve fixed this issue in
-1.16.
+We [added support] for HTML template literal formatting using the `/* HTML */` pseudo-tag
+in Prettier 1.15, but due to a bug, it only worked for JavaScript code. We’ve fixed this
+issue in Prettier 1.16.
 
-[html-comment-template]: https://prettier.io/blog/2018/11/07/1.15.0.html#html-template-literal-in-javascript
+[added support]: https://prettier.io/blog/2018/11/07/1.15.0.html#html-template-literal-in-javascript
 
 ### CSS
 
@@ -495,15 +495,15 @@ $my-list2: a // a
 
 #### Treat `.mjml` files as HTML ([#5505] by [@n1ru4l])
 
-MJML is a markup language that uses the same syntax as HTML, we added its
-extension name `.mjml` to the list of HTML extension names so that it should be
-recognized by default.
+MJML is a markup language that uses the same syntax as HTML. We added the `.mjml`
+file extension to the list of extensions that are recognized as HTML, so Prettier
+will format it.
 
 #### Smart quote for attributes ([#5590] by [@ikatyang])
 
-Previously, attributes quotes were always printed as double quotes. To improve
-readability, they are now printed as the quote type that will produce fewer
-escapes.
+Previously, the quotes around HTML attribute values were always printed as double
+quotes. To improve readability, they are now printed as the quote type that results
+in fewer produce fewer escape characters in the string, like we do for other strings.
 
 <!-- prettier-ignore -->
 ```html
@@ -525,8 +525,9 @@ escapes.
 #### Tag names are case-sensitive ([#5606] by [@ikatyang])
 
 Previously, we lowercased tag names before querying tag definition while
-parsing, which causes `<Input>` component to be recognized as `<input>` and
-produces a syntax error on `</Input>` since void elements could not be closed.
+parsing, which caused `<Input>` component to be recognized as a native `<input>`.
+This would produce a syntax error when `</Input>` was encountered since `<input>`
+is a void element, and void elements can’t have closing elements.
 We’ve fixed this issue in 1.16.
 
 <!-- prettier-ignore -->
@@ -549,9 +550,9 @@ We’ve fixed this issue in 1.16.
 
 #### Add parentheses to avoid unexpected `}}` in interpolations ([#5657] by [@ikatyang])
 
-`}}` is not allowed to be used in a interpolation since it’ll be recognized as
-interpolation ending, we’ve added parentheses for cases that may produce invalid
-`}}` in 1.16.
+`}}` is not allowed to be used in a interpolation since it’ll be recognized as the
+end of the interpolation. Prettier 1.15 would sometimes output code that broke this
+rule. Prettier 1.16 now adds parentheses to prevent `}}` from appearing in interpolations.
 
 <!-- prettier-ignore -->
 ```html
