--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -503,7 +503,7 @@ will format it.
 
 Previously, the quotes around HTML attribute values were always printed as double
 quotes. To improve readability, they are now printed as the quote type that results
-in fewer produce fewer escape characters in the string, like we do for other strings.
+in fewer escape characters being requiered in the string, like we do for other strings.
 
 <!-- prettier-ignore -->
 ```html
