docs: add missing reference

--- a/website/blog/2019-01-00-1.16.0.md
+++ b/website/blog/2019-01-00-1.16.0.md
@@ -356,7 +356,7 @@ world
 }
 ```
 
-#### Remove unnecessary linebreaks from HTML template literals
+#### Remove unnecessary linebreaks from HTML template literals ([#5771] by [@ikatyang])
 
 <!-- prettier-ignore -->
 ```js
@@ -605,3 +605,4 @@ rule. Prettier 1.16 now adds parentheses to prevent `}}` from appearing in inter
 [#5728]: https://github.com/prettier/prettier/pull/5728
 [#5739]: https://github.com/prettier/prettier/pull/5739
 [#5763]: https://github.com/prettier/prettier/pull/5763
+[#5771]: https://github.com/prettier/prettier/pull/5771
