ika's suggestions and fix lint

--- a/website/blog/2019-04-12-1.17.0.md
+++ b/website/blog/2019-04-12-1.17.0.md
@@ -89,61 +89,61 @@ An example configuration repository is available [here](https://github.com/azz/p
 
 ### JavaScript
 
-#### Respect newlines between parameters ([#5260] by [@evilebottnawi])
+#### Respect newlines between parameters ([#5836] by [@evilebottnawi])
 
 <!-- prettier-ignore -->
 ```js
 // Input
 function foo(
-one,
+  one,
 
-two,
-three,
-four,
+  two,
+  three,
+  four,
 
 
-five,
-six,
-seven,
-eight,
-nine,
-ten,
+  five,
+  six,
+  seven,
+  eight,
+  nine,
+  ten,
 
-eleven
+  eleven
 
 ) {}
 
 // Output (Prettier 1.16)
 function foo(
-one,
-two,
-three,
-four,
-five,
-six,
-seven,
-eight,
-nine,
-ten,
-eleven
+  one,
+  two,
+  three,
+  four,
+  five,
+  six,
+  seven,
+  eight,
+  nine,
+  ten,
+  eleven
 ) {}
 
 // Output (Prettier 1.17)
 function foo(
-one,
+  one,
 
-two,
-three,
-four,
+  two,
+  three,
+  four,
 
-five,
-six,
-seven,
-eight,
-nine,
-ten,
+  five,
+  six,
+  seven,
+  eight,
+  nine,
+  ten,
 
-eleven
+  eleven
 ) {}
 ```
 
@@ -334,19 +334,18 @@ fragment F($var: Int) on Type {
 
 Prettier now supports automatically loading scoped plugins named `@scope_name/prettier-plugin-*`.
 
-
 [@adek05]: https://github.com/adek05
 [@azz]: https://github.com/azz
 [@bakkot]: https://github.com/bakkot
 [@chenshuai2144]: https://github.com/chenshuai2144
 [@evilebottnawi]: https://github.com/evilebottnawi
 [@ikatyang]: https://github.com/ikatyang
-[@Kocal]: https://github.com/Kocal
+[@kocal]: https://github.com/Kocal
 [@noahsug]: https://github.com/noahsug
 [@ntotten]: https://github.com/ntotten
 [@voithos]: https://github.com/voithos
 [@yangsu]: https://github.com/yangsu
-[#5260]: https://github.com/prettier/prettier/pull/5260
+[#5836]: https://github.com/prettier/prettier/pull/5836
 [#5701]: https://github.com/prettier/prettier/pull/5701
 [#5800]: https://github.com/prettier/prettier/pull/5800
 [#5843]: https://github.com/prettier/prettier/pull/5843
