--- a/website/blog/2019-04-12-1.17.0.md
+++ b/website/blog/2019-04-12-1.17.0.md
@@ -4,7 +4,9 @@ authorURL: https://github.com/duailibe
 title: "Prettier 1.17: More quotes options and support for shared configs"
 ---
 
-This release brings long requested flexibility for object's property quotes, support for shared configurations, a LWC parser, new GraphQL syntax and other fixes.
+This release brings long-requested flexibility to quotes around object properties, allows Prettier configuration to be shared in the form of packages, adds a [LWC] parser, adds support for new GraphQL syntax and fixes lots of formatting bugs.
+
+[LWC]: https://developer.salesforce.com/docs/component-library/documentation/lwc
 
 <!--truncate-->
 
@@ -29,21 +31,21 @@ const headers = {
   "origin": "prettier.io"
 };
 
-// Output --quote-props=as-needed
+// Output (Prettier 1.16 or --quote-props=as-needed)
 const headers = {
   accept: "application/json",
   "content-type": "application/json",
   origin: "prettier.io"
 };
 
-// Output --quote-props=consistent
+// Output (--quote-props=consistent)
 const headers = {
   "accept": "application/json",
   "content-type": "application/json",
   "origin": "prettier.io"
 };
 
-// Output --quote-props=preserve
+// Output (--quote-props=preserve)
 const headers = {
   accept: "application/json",
   "content-type": "application/json",
@@ -71,7 +73,7 @@ If you don't want to use `package.json`, you can use any of the supported extens
 "@company/prettier-config"
 ```
 
-An example configuration repository is available [here](https://github.com/azz/prettier-config).
+[@azz] has created an example configuration package. You can [see the source on GitHub](https://github.com/azz/prettier-config) or [install it via npm](https://www.npmjs.com/package/@azz/prettier-config).
 
 > Note: This method does **not** offer a way to _extend_ the configuration to overwrite some properties from the shared configuration. If you need to do that, import the file in a `.prettierrc.js` file and export the modifications, e.g:
 >
@@ -256,7 +258,7 @@ declare const array: readonly number[];
 
 #### Add support for Lightning Web Components ([#5800] by [@ntotten])
 
-Supports [Lightning Web Components (LWC)](https://developer.salesforce.com/docs/component-library/documentation/lwc) template format for HTML attributes by adding a new parser called `lwc`.
+Supports [Lightning Web Components (LWC)][LWC] template format for HTML attributes by adding a new parser called `lwc`.
 
 <!-- prettier-ignore -->
 ```html
@@ -329,7 +331,7 @@ fragment F($var: Int) on Type {
 
 #### Automatically discover scoped plugins ([#5945] by [@Kocal])
 
-Prettier now supports automatically loading scoped plugins named `@scope_name/prettier-plugin-*`.
+Prettier now supports automatically loading scoped plugins named `@scope-name/prettier-plugin-*`.
 
 [@adek05]: https://github.com/adek05
 [@azz]: https://github.com/azz
