Fix lint in blog post

--- a/website/blog/2019-04-12-1.17.0.md
+++ b/website/blog/2019-04-12-1.17.0.md
@@ -258,7 +258,7 @@ declare const array: readonly number[];
 
 #### Add support for Lightning Web Components ([#5800] by [@ntotten])
 
-Supports [Lightning Web Components (LWC)][LWC] template format for HTML attributes by adding a new parser called `lwc`.
+Supports [Lightning Web Components (LWC)][lwc] template format for HTML attributes by adding a new parser called `lwc`.
 
 <!-- prettier-ignore -->
 ```html
