docs(blog): add missing subheader

--- a/website/blog/2019-04-12-1.17.0.md
+++ b/website/blog/2019-04-12-1.17.0.md
@@ -213,6 +213,8 @@ let value = /** @type {string} */ this(.members[0]).functionCall();
 let value = /** @type {string} */ (this.members[0]).functionCall();
 ```
 
+### Markdown
+
 #### Do not align table contents if it exceeds the print width and `--prose-wrap never` is set ([#5701] by [@chenshuai2144])
 
 The aligned table is less readable than the compact one if it's particularly long and the word wrapping is not enabled in the editor so we now print them as compact tables in these situations.
