fix: get html text from ast correctly

--- a/tests/mdx/jsx.mdx
+++ b/tests/mdx/jsx.mdx
@@ -6,6 +6,12 @@
 <Hello>
     test   <World />   test
 </Hello>
+
+---
+
+<Hello>
+    test   <World />   test
+</Hello>
 <Hello>
     test   <World />   test
 </Hello>
