fix: additional text after jsx should also be allowed

--- a/tests/mdx/jsx.mdx
+++ b/tests/mdx/jsx.mdx
@@ -5,7 +5,7 @@
 
 <Hello>
     test   <World />   test
-</Hello>
+</Hello>123
 
 ---
 
@@ -14,7 +14,7 @@
 </Hello>
 <Hello>
     test   <World />   test
-</Hello>
+</Hello>123
 
 ---
 
