--- a/tests/mdx/jsx.mdx
+++ b/tests/mdx/jsx.mdx
@@ -5,7 +5,16 @@
 
 <Hello>
     test   <World />   test
+</Hello>123
+
+---
+
+<Hello>
+    test   <World />   test
 </Hello>
+<Hello>
+    test   <World />   test
+</Hello>123
 
 ---
 
