fix: JSX fragment should be allowed in mdx

--- a/tests/mdx/jsx.mdx
+++ b/tests/mdx/jsx.mdx
@@ -18,6 +18,12 @@
 
 ---
 
+<><Hello>
+    test   <World />   test
+</Hello></>
+
+---
+
 | Column 1 | Column 2 |
 |---|---|
 | Text | <Hello>Text</Hello> |
