--- a/tests/mdx/jsx.mdx
+++ b/tests/mdx/jsx.mdx
@@ -18,6 +18,15 @@
 
 ---
 
+<Hello>
+    test   <World />   test
+</Hello>       123
+<Hello>
+    test   <World />   test
+</Hello>       234
+
+---
+
 | Column 1 | Column 2 |
 |---|---|
 | Text | <Hello>Text</Hello> |
